--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ footer{text-align:center;padding:30px 0;background:#111;color:#888;margin-top:50
     <!-- right: content -->
     <div class="about-pro__right">
       <div class="title-row">
-        <h3 class="name-pro">حسن</h3>
+        <h3 class="name-pro">L7Ssne</h3>
         <p class="role-pro">مبرمج ويب احترافي • Symfony • Front-End • UI/UX</p>
       </div>
 
