--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ footer{text-align:center;padding:30px 0;background:#111;color:#888;margin-top:50
 <header id="hero">
   <div class="hero-content">
     <h1 id="typed-text"></h1>
-    <p>مبرمج ويب – Symfony | Front-End | UI/UX</p>
+    <p>مبرمج ويب – Back-End | Front-End | UI/UX</p>
     <a href="#projects" class="btn-main">شوف مشاريعي</a>
   </div>
   <div class="skill-icons">
@@ -3362,7 +3362,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
 // Hero Typing Effect
-const texts=["L7ssne","مبرمج ويب","Symfony | Front-End | UI/UX"];
+const texts=["L7ssne","مبرمج ويب","Back-End | Front-End | UI/UX"];
 let count=0,index=0,currentText='',letter='';
 (function type(){
   if(count===texts.length)count=0;
